syntax = "proto3";

package proto;

option go_package = "./proto;proto";

import "block.proto";

service Queries {
    rpc GetBlock(BlockRequest) returns (Block) {}

    rpc GetBlockContent(BlockRequest) returns (BlockContent) {}
    rpc GetBlockMeta(BlockRequest) returns (BlockMeta) {}
    rpc GetBlockRules(BlockRequest) returns (BlockRules) {}

    rpc search(SearchRequest) returns (BlockList) {}

    rpc GetVersions(VersionsRequest) returns (VersionResponse) {}

    rpc GetLanguages(LanguageRequest) returns (LanguageList) {}

    rpc GetTags(Selectors) returns (TagList) {}
    rpc GetCategories(Selectors) returns (CategoryList) {}
}

message BlockRequest {
    string id = 1;
    string lang = 2;
    optional int32 version = 3;
}

message VersionsRequest {
    string id = 1;
    string lang = 2;
}

message VersionResponse {
  repeated ver versions = 1;
}

message ver {
  int32 version = 1;
  optional string changeLog = 2;
}

message LanguageRequest {
    string id = 1;
}

message LanguageList {
    repeated Language langs = 1;
    message Language {
        string code = 1;
        string name = 2;
    }
}

message Selectors {
    repeated string authors = 1;
    repeated string categories = 2;
    repeated string tags = 3;
    string type = 4;
}

message Pagination {
    uint32 pageSize = 1;
    uint32 pageNum = 2;
    optional uint32 total = 3;
}

message SearchRequest {
    Selectors selectors = 1;
    Pagination pagination = 2;
}

message BlockList {
    repeated BlockMeta metas = 1;
    Pagination pagination = 2;
}

message TagList {
    repeated string tags = 1;
}

message CategoryList {
    repeated string categories = 1;
}
